--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "bootstrap": "^5.1.3",
     "concurrently": "^6.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
